# uci-bootcamp-2021

./: .gitignore  404.html  LICENSE.md  README.md  book.toml  chapter_1.html  copyright.html  index.html  preface.html  print.html  pyproject.toml  searchindex.js  searchindex.json
.github/workflows/: main.yml
data/: test.csv  us-graph-2015-02.csv  us-graph-2018-05.csv  us-leaderboard-2018-05.csv
ide/: call_graphs.html  debuggers.html  error_detection.html  index.html  pycharm.html  refactoring.html  run_configurations.html  syntax_highlighting.html  tools.html
ide/breakpoints/: debuggers.html
ide/call_graphs/: call_graphs.html
ide/error_detection/: error_detection.html
ide/intro/: index.html  pycharm.html  refactoring.html  tools.html
ide/refactoring/: refactoring.html
ide/run_configs/: run_configurations.html
ide/syntax_highlighting/: syntax_highlighting.html
ide/vcs/: vcs.html
ides/what_they_can_do/: simplification.html
notebooks/: Netflix.ipynb
python/: basic_math_operators.html  booleans.html  comments.html  functions.html  hello_world.html  import_this.html  ipython.html  jupyter_notebook.html  jupyter_notebook_pitfalls.html  modules.html  packages.html  pathlib.html  the_ndarray.html  typing.html  variables.html
python/basic_containers/: lists.html  sets.html  summary.html
python/loops/: for.html  while.html
python/pandas/: dataframe.html
python/third_party_libs/: index.html  summary.html
src/: SUMMARY.md  chapter_1.md  copyright.md  preface.md
src/ide/: call_graphs.md  debuggers.md  error_detection.md  pycharm.md  readme.md  (+3 more)
(+53 files in other folders)
